--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
   
   header {
     flex: 0 80px;
+    background-color: rgb(0, 80, 0);
   }
   
   main {
@@ -16,8 +17,14 @@ body {
     justify-content: space-around;
   }
   
-  footer {
-    flex: 0 30px;
+  
+
+  .bg-dark {
+    background-color: rgb(0, 80, 0) !important;
+  }
+
+  .bg-secondary {
+    background-color: hsl(120, 30%, 40%) !important;
   }
   
   menu {
@@ -26,18 +33,19 @@ body {
     /*  overwrite Bootstrap so the menu does not wrap */
     flex-direction: row !important;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     list-style: none;
   }
 
 .navbar-nav {
     margin-top: 8px;
+    padding-right: 5vw;
 }
   
 .navbar-brand {
-    padding-left: 0.1vw;
+    padding-left: 1vw;
     padding-top: 0;
-    font-size: 2rem;
+    font-size: 2.2rem;
     /* border-bottom: solid rgb(182, 182, 182) thin; */
   }
   
