--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
     display: block;
     /*flex-direction: column;*/
     justify-content: start;/**/
+    overflow-y: auto;
   }
   
   .text-center {
