--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@ a {
   .homepagestuff {
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:space-evenly;
   }
   
 @media (max-height: 600px) {
