--- a/index.css
+++ b/index.css
@@ -85,6 +85,7 @@ a {
     display:flex;
     flex-direction: row;
     justify-content:space-evenly;
+    flex-wrap:wrap;
   }
   
 @media (max-height: 600px) {
