--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-body {
+.body {
     display: flex;
     flex-direction: column;
     min-width: 375px;
@@ -16,10 +16,19 @@ body {
     justify-content: start;/**/
     overflow-y: auto;
   }
+
+  footer {
+    flex: 0 30px;
+    background-color:  rgb(0, 80, 0) !important;
+  }
   
 a {
   color:aquamarine;
 }
+
+  .justify-center {
+    justify-content: center;
+  }
 
   .text-center {
     align-items: start !important;
@@ -28,11 +37,11 @@ a {
   }
 
   .bg-dark {
-    background-color: rgb(0, 80, 0) !important;
+    background-color: hsl(120, 30%, 40%) !important;
   }
 
   .bg-secondary {
-    background-color: hsl(120, 30%, 40%) !important;
+    background-color:hsl(120, 30%, 40%) !important;
   }
   
   menu {
